--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body{
     font-size: 1.4rem;
 }
 main{
-    width: 600px;
+    width: 1000px;
     margin: 50px auto;
 }
 h1{
@@ -29,6 +29,9 @@ h1 svg{
 }
 #buttons{
     text-align: right;
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
 }
 #info{
     color: var(--primaryColor);
@@ -42,8 +45,9 @@ button{
     cursor: pointer;
 }
  div#game{
+    margin-top: 50px;
     line-height:35px;
-    height:105px;
+    height:140px;
     overflow: hidden;
     position: relative;
 }
@@ -102,8 +106,8 @@ div.word{
 }
 
 #game.notover #cursor{
-    top: 198px;
-    left: 470px;
+    top: 215px;
+    left: 265px;
 }
 
 #game:focus #cursor{
